--- a/resources/css/Untitled-1.css
+++ b/resources/css/Untitled-1.css
@@ -7,3 +7,10 @@
     color:#006064; /* Main Header */
     color:#36B6B2; /* Menu Active */
 }
+
+.color1 {color: #385483;}
+.color2 {color: #1d5f88;}
+.color3 {color: #207794;}
+.color4 {color: #20969c;}
+.color5 {color: #2bc89f;}
+
