--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,8 +73,6 @@
     z-index: 1; /* Ensure content stays on top */
 }
 
-
-
 table {
     width: 130%;
     border-collapse: separate;
@@ -86,6 +84,7 @@ th{
     text-align: left; /* Align text to the left */
     word-wrap: break-word; /* Allow long words to break and wrap */
 }
+
 
 
 .btn-grad-primary {background-image: linear-gradient(to right, #3c8dbc 0%, #429dcd  51%, #50bdfc  100%)}
@@ -253,3 +252,6 @@ th{
     z-index: 9999;
 }
   
+color{
+    color: rgb(142, 188, 0);
+}
